nohup.out
+ cmake -Bbuild -H. -DCMAKE_BUILD_TYPE=Debug
-- Configuring done
-- Generating done
-- Build files have been written to: /home/ubuntu/wcz/project/votesearch/build
+ cmake --build build
Consolidate compiler generated dependencies of target HCNNG_LIB
[ 11%] Building CXX object src/CMakeFiles/HCNNG_LIB.dir/guided_structure.cpp.o
[ 22%] Building CXX object src/CMakeFiles/HCNNG_LIB.dir/search.cpp.o
/home/ubuntu/wcz/project/votesearch/src/search.cpp: In function ‘std::tuple<std::vector<int, std::allocator<int> >, std::vector<float, std::allocator<float> > > search_KNN_by_Guided_tree(float*, int, std::vector<std::vector<int> >&, Matrix<float>&, std::vector<Guided_tree*>&, int, int)’:
/home/ubuntu/wcz/project/votesearch/src/search.cpp:77:84: error: cannot bind non-const lvalue reference of type ‘int&’ to an rvalue of type ‘int’
   77 |                 vector<int> neighbors = find_neighbors(query, v, trees[v], points, 0, points.cols);
      |                                                                                    ^
In file included from /home/ubuntu/wcz/project/votesearch/include/search.h:32,
                 from /home/ubuntu/wcz/project/votesearch/src/search.cpp:7:
/home/ubuntu/wcz/project/votesearch/include/guided_structure.h:26:104: note:   initializing argument 5 of ‘std::vector<int> find_neighbors(float*, int, Guided_tree*, Matrix<float>&, int&, int)’
   26 | std::vector<int> find_neighbors(float *query, int curr, Guided_tree *tree, Matrix<float> &points, int &start_dim, int end_dim);
      |                                                                                                   ~~~~~^~~~~~~~~
/home/ubuntu/wcz/project/votesearch/src/search.cpp: In function ‘std::tuple<std::vector<int, std::allocator<int> >, std::vector<float, std::allocator<float> > > search_KNN_two_phase(float*, int, std::vector<std::vector<int> >&, Matrix<float>&, std::vector<Guided_tree*>&, int, int, int)’:
/home/ubuntu/wcz/project/votesearch/src/search.cpp:126:84: error: cannot bind non-const lvalue reference of type ‘int&’ to an rvalue of type ‘int’
  126 |                 vector<int> neighbors = find_neighbors(query, v, trees[v], points, 0, points.cols);
      |                                                                                    ^
In file included from /home/ubuntu/wcz/project/votesearch/include/search.h:32,
                 from /home/ubuntu/wcz/project/votesearch/src/search.cpp:7:
/home/ubuntu/wcz/project/votesearch/include/guided_structure.h:26:104: note:   initializing argument 5 of ‘std::vector<int> find_neighbors(float*, int, Guided_tree*, Matrix<float>&, int&, int)’
   26 | std::vector<int> find_neighbors(float *query, int curr, Guided_tree *tree, Matrix<float> &points, int &start_dim, int end_dim);
      |                                                                                                   ~~~~~^~~~~~~~~
/home/ubuntu/wcz/project/votesearch/src/search.cpp: In function ‘std::tuple<std::vector<int, std::allocator<int> >, std::vector<float, std::allocator<float> > > search_KNN_two_phase_nn(float*, int, std::vector<std::vector<int> >&, Matrix<float>&, std::vector<Guided_tree*>&, int, int, int)’:
/home/ubuntu/wcz/project/votesearch/src/search.cpp:209:84: error: cannot bind non-const lvalue reference of type ‘int&’ to an rvalue of type ‘int’
  209 |                 vector<int> neighbors = find_neighbors(query, v, trees[v], points, 0, points.cols);
      |                                                                                    ^
In file included from /home/ubuntu/wcz/project/votesearch/include/search.h:32,
                 from /home/ubuntu/wcz/project/votesearch/src/search.cpp:7:
/home/ubuntu/wcz/project/votesearch/include/guided_structure.h:26:104: note:   initializing argument 5 of ‘std::vector<int> find_neighbors(float*, int, Guided_tree*, Matrix<float>&, int&, int)’
   26 | std::vector<int> find_neighbors(float *query, int curr, Guided_tree *tree, Matrix<float> &points, int &start_dim, int end_dim);
      |                                                                                                   ~~~~~^~~~~~~~~
gmake[2]: *** [src/CMakeFiles/HCNNG_LIB.dir/build.make:118：src/CMakeFiles/HCNNG_LIB.dir/search.cpp.o] 错误 1
gmake[1]: *** [CMakeFiles/Makefile2:118：src/CMakeFiles/HCNNG_LIB.dir/all] 错误 2
gmake: *** [Makefile:91：all] 错误 2
+ mkdir -p bin/graph
+ dataset=gist
+ data_path=dataset/gist
+ graph_path=./bin/graph/gist_hcnng.ivecs
+ '[' '!' -f ./bin/graph/gist_hcnng.ivecs ']'
+ ./bin/test_l_2phase_search dataset/gist/gist_base.fvecs dataset/gist/gist_query.fvecs dataset/gist/gist_groundtruth.ivecs ./bin/graph/gist_hcnng.ivecs 100 -1 30
